# sorting-algorithm-runtime-visualization

./: LICENSE  README.md  main.py  pyproject.toml  report.md
algorithms/: __init__.py  insertion.py  merge.py
tests/: test_insertion_sort.py  test_merge_sort.py
