[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sorting-algorithm-runtime-visualization"
version = "0.0.1"
authors = [{ name="Will Skaggs", email="skaggswi@msu.edu" }]
description = "Comparison of insertion and merge sort runtimes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wskaggs/sorting-algorithm-runtime-visualization"
"Bug Tracker" = "https://github.com/wskaggs/sorting-algorithm-runtime-visualization/issues"

[tool.pytest.ini_options]
pythonpath = "algorithms"
testpaths = ["tests"]
